<resources>
    <string name="app_name">BIMO</string>

    <string name="name_instruction">
        Инструкция
    </string>

    <string name="instruction">
        \   Добро пожаловать в приложение BIMO. Здесь предложена краткая инструкция по его использованию.\n
        \   Для начала работы перейдите в настройки, нажав на кнопку в правом верхнем углу, введите IP-адресс BIMO, к которому желаете подключиться, и нажните кнопку \"Применить\".\n
        \   После того, как связь будет установлена, вы сможете переключаться между режимами с помощью четырех кнопок на нижней панели.\n
        \   Для просмотра текущего эмоционального состояния наблюдаемого и статистики нажмите на первую слева кнопку.\n
        \   Для просмотра видео с камеры BIMO и текущего эмоционального состояния наблюдаемого нажмите на вторую кнопку.\n
        \   Для перехода к режиму выбора эмоций на экране BIMO нажмите на третью кнопку.\n
        \   Для повторного просмотра инструкции нажмите на четвертую кнопку.\n
        \   Все взаимодействие с BIMO происходит в реальном времени, статистика собирается за последние 60 секунд на протяжении всей сессии, отображение эмоций и передача видео происходит с незначительной задержкой.\n
        \   Желаем вам приятного использования приложения, мы рады, что вы обратились к нам. При возникновении вопросов или предложений пишите по адресу \nmurli.cpp@gmail.com\n
    </string>

    <string name="end_instruction">
    С уважением, команда разработчиков.
    </string>

    <string name="welcome">
        Добро пожаловать!
    </string>

    <string name="welcome_what_is_it">
    Вас приветствует приложение-компаньон для робота-помощника BIMO.
    </string>

    <string name="welcome_turn_on">
        Чтобы начать работу, включите вашего робота-помощника.
    </string>

    <string name="welcome_go_to">
        С подробной инструкцией можно ознакомиться по кнопке в нижнем правом углу.\n
    </string>
</resources>