<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/comic_sans_ms"
                android:gravity="left"
                android:textSize="50sp"
                android:text="@string/name_instruction" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/comic_sans_ms"
                android:textColor="@color/text_color"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:hyphenationFrequency="normal"
                android:breakStrategy="high_quality"
                android:textSize="23sp"
                android:text="@string/instruction" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/comic_sans_ms"
                android:gravity="right"
                android:textSize="25sp"
                android:text="@string/end_instruction" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>