<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:fontFamily="@font/comic_sans_ms"
            android:text="@string/welcome"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_what_is_it" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:fontFamily="@font/comic_sans_ms"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_turn_on" />

        <TextView
            android:id="@+id/welcome_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/comic_sans_ms"
            android:textColor="@color/text_color"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="26sp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="Поиск..." />

        <Button
            android:id="@+id/welcome_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_sans_ms"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/BIMO_face"
            android:gravity="center"
            android:textSize="26sp"
            android:layout_margin="20dp"
            android:text="Продолжить" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_sans_ms"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_go_to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>